--- a/assets/css/pad-style.css
+++ b/assets/css/pad-style.css
@@ -3,10 +3,6 @@
 
 /* <HEADER> */
 
-header {
-    overflow-x: visible;
-}
-
 header #logo {
     height: 80px;
     margin-left: 0;
@@ -15,6 +11,7 @@ header #logo {
 
 .sign_in {
     width: auto;
+    padding-right: 0;
 }
 
 
@@ -51,11 +48,9 @@ header #logo {
 }
 
 .filters_form {
-    /* The filters are displayed with a Grid in the pad version */
     display: grid;
     width: 100%;
     margin-top: 0;
-    margin-left: 5%;
     gap: 20px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -110,7 +105,6 @@ header #logo {
 }
 
 .accomodations_grid {
-    /* Cards are displayed with Flexbox in pad version */
     display: flex;
     flex-direction: column;
 }
@@ -127,7 +121,7 @@ header #logo {
 .accomodation_picture {
     flex-direction: row;
     height: 144px;
-    max-width: 300px;
+    width: 301px;
 }
 
 .accomodation_picture img {
@@ -144,14 +138,11 @@ header #logo {
 }
 
 .room_info {
-    justify-content: space-between;
-    margin-bottom: 35px;
+    justify-content: space-around;
 }
 
 .accomodation_name,
 .accomodation_price {
-    flex-wrap: wrap;
-    margin-top: 12px;
     max-width: 65%;
 }
 
@@ -205,7 +196,6 @@ header #logo {
 }
 
 .activities_in_city {
-    /* Activities are displayed with a Grid on the pad version */
     display: grid;
     margin: 0% 8% 4% 8%;
     gap: 2%;
